--- a/USBreeze.uvprojx
+++ b/USBreeze.uvprojx
@@ -313,7 +313,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>1</Optim>
+            <Optim>4</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -409,6 +409,11 @@
               <FilePath>.\Src\USBD_User_HID_0.c</FilePath>
             </File>
             <File>
+              <FileName>USBD_User_HID_1.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Src\USBD_User_HID_1.c</FilePath>
+            </File>
+            <File>
               <FileName>HostCommWarpperFan.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\Src\HostCommWarpperFan.c</FilePath>
@@ -424,9 +429,9 @@
               <FilePath>.\Src\RGBControl.c</FilePath>
             </File>
             <File>
-              <FileName>USBD_User_HID_1.c</FileName>
+              <FileName>RGBLampPositions.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Src\USBD_User_HID_1.c</FilePath>
+              <FilePath>.\Src\RGBLampPositions.c</FilePath>
             </File>
           </Files>
         </Group>
