Add sch & pcb. Increase RGB HID channels to 3.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "fancontrol.h": "c",
         "hostcommwarpper.h": "c",
-        "rgbcontrol.h": "c"
+        "rgbcontrol.h": "c",
+        "bsp.h": "c"
     }
 }
