fan offline controls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "fancontrol.h": "c",
         "hostcommwarpper.h": "c",
         "rgbcontrol.h": "c",
-        "bsp.h": "c"
+        "bsp.h": "c",
+        "paramstoragekeys.h": "c",
+        "paramstorage.h": "c"
     }
 }
