--- a/Firmware/USBreeze.uvprojx
+++ b/Firmware/USBreeze.uvprojx
@@ -189,7 +189,7 @@
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
-            <useUlib>0</useUlib>
+            <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
@@ -432,6 +432,16 @@
               <FileName>USBD_User_HID_1_3.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\Src\USBD_User_HID_1_3.c</FilePath>
+            </File>
+            <File>
+              <FileName>ParamStorage.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Src\ParamStorage.c</FilePath>
+            </File>
+            <File>
+              <FileName>ParamStorageWarpperFan.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Src\ParamStorageWarpperFan.c</FilePath>
             </File>
           </Files>
         </Group>
